# check

./: configure.ac
checkmk/: Makefile.am  README  checkmk.in  configure  configure.ac
checkmk/doc/: checkmk.1  checkmk.sgml
